# friedrich

./: .gitignore  Cargo.toml  LICENSE  readme.md  todo.md
.github/: dependabot.yml
research/: readme.md  test.R
src/: conversion.rs  gaussian_process.rs  gaussian_process_builder.rs  input.rs  kernel.rs  kernel_regression.rs  lib.rs  main.rs  matrix.rs  multivariate_normal.rs
src/algebra/: extendable_matrix.rs  mod.rs  multivariate_normal.rs  slice.rs
src/conversion/: input.rs  matrix.rs  mod.rs  output.rs  slice.rs  vector.rs
src/gaussian_process/: builder.rs  constructors.rs  fit.rs  mod.rs  multivariate_normal.rs  optimizer.rs  predict.rs  trained.rs
src/gaussian_process_nalgebra/: builder.rs  constructors.rs  fit.rs  mod.rs  multivariate_normal.rs  predict.rs
src/optimizer/: mod.rs
src/parameters/: kernel.rs  mod.rs  prior.rs
