[package]
name = "friedrich"
version = "0.3.3"
authors = ["Nestor Demeure"]
edition = "2018"

# description of the crate
# see https://doc.rust-lang.org/cargo/reference/manifest.html#package-metadata
description = "Gaussian Process Regression."
repository = "https://github.com/nestordemeure/friedrich"
documentation = "https://docs.rs/friedrich"
readme = "readme.md"
keywords = ["regression", "gaussian", "process", "kernel", "kriging"]
categories = ["algorithms", "science"] # crates.io/category_slugs
license = "Apache-2.0"

[features]
friedrich_ndarray = ["ndarray"]

[dependencies]
nalgebra = "0.23.0"
rand = "0.7.3"
rand_distr = "0.4.1"
ndarray = { version = "0.13.1", optional = true }
