[package]
name = "friedrich"
version = "0.3.3"
authors = ["Nestor Demeure"]
edition = "2018"

# description of the crate
# see https://doc.rust-lang.org/cargo/reference/manifest.html#package-metadata
description = "Gaussian Process Regression."
repository = "https://github.com/nestordemeure/friedrich"
documentation = "https://docs.rs/friedrich"
readme = "readme.md"
keywords = ["regression", "gaussian", "process", "kernel", "kriging"]
categories = ["algorithms", "science"] # crates.io/category_slugs
license = "Apache-2.0"

[features]
default = ["friedrich_serde"]
friedrich_ndarray = ["ndarray"]
friedrich_serde = ["serde", "nalgebra/serde-serialize"]

[dependencies]
nalgebra = "0.29"
rand = "0.8"
rand_distr = "0.4"
ndarray = { version = "0.15", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
